--- a/calendar.html
+++ b/calendar.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="icon" href="https://cdn.glitch.com/20a47d55-5553-4133-a462-850e3e1cd11b%2Fschool.svg?v=1561558568625">
   </head>  
   <header>
