--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     </container>
     <section class="links">
-      <script src="/index.js" defer></script>
+      <script src="./index.js" defer></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     </section>
   </body>
