--- a/study.html
+++ b/study.html
@@ -71,7 +71,7 @@
     
   
     <section class="links">
-      <script src="/index.js" defer></script>
+      <script src="./index.js" defer></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     </section>
   </body>  
