--- a/resources.html
+++ b/resources.html
@@ -25,7 +25,7 @@
   <body>
     <h2>
       <center>
-      <u>Resources</u>
+        <h2><u>Resources</u></h2>
       </center>
       </h2>
     <div class="resources">
