--- a/resources.html
+++ b/resources.html
@@ -24,7 +24,7 @@
   </header>
   <body>
       <center>
-        <h1><u>Resources</u></h1>
+        <h1 class="resource-h1"><u>Resources</u></h1>
       </center>
     <div class="resources">
       <center>
